[gd_scene load_steps=2 format=3 uid="uid://ddoa8yw58lf23"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_o87a1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o87a1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NameLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -54.0
offset_right = 65.5
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
text = "Goofy ahh game"

[node name="SingleplayerButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Singleplayer"

[node name="MultiplayerButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = 18.0
offset_right = 48.5
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
text = "Multiplayer"

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 51.0
offset_right = 35.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[connection signal="pressed" from="CanvasLayer/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_pressed"]
